--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -23,16 +23,16 @@
                         <a class="page-scroll" href="#how_it_works">Jak to działa?</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                        <a class="page-scroll" href="#inspirations">Inspiracje</a>
                     </li>
+{#                    <li>#}
+{#                        <a class="page-scroll" href="#about">About</a>#}
+{#                    </li>#}
+{#                    <li>#}
+{#                        <a class="page-scroll" href="#team">Team</a>#}
+{#                    </li>#}
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#team">Team</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#contact">Kontakt</a>
                     </li>
                 </ul>
             </div>
