--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -1,4 +1,5 @@
 {% extends "base/base.html" %}
+{% load thumbnail %}
 {% block content %}
 <!-- Header -->
     <header>
@@ -50,7 +51,7 @@
     </section>
 
     <!-- Portfolio Grid Section -->
-    <section id="insporations" class="bg-light-gray">
+    <section id="inspirations" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -60,6 +61,7 @@
             </div>
             <div class="row">
                 {% for product in products %}
+                {% if product.image %}
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
@@ -67,13 +69,14 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/roundicons.png" class="img-responsive" alt="">
+                        <img src="{% thumbnail product.image 400x289 crop %}" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>{{ product.name }}</h4>
 {#                        <p class="text-muted">Graphic Design</p>#}
                     </div>
                 </div>
+                    {%  endif %}
                 {% endfor %}
             </div>
         </div>
