--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -28,9 +28,9 @@
 {#                    <li>#}
 {#                        <a class="page-scroll" href="#about">About</a>#}
 {#                    </li>#}
-{#                    <li>#}
-{#                        <a class="page-scroll" href="#team">Team</a>#}
-{#                    </li>#}
+                    <li>
+                        <a class="page-scroll" href="#team">Team</a>
+                    </li>
                     <li>
                         <a class="page-scroll" href="#contact">Kontakt</a>
                     </li>
