--- a/static/css/less/agency.less
+++ b/static/css/less/agency.less
@@ -246,7 +246,7 @@ section {
 
 // Portfolio Section
 
-#portfolio {
+#inspirations {
     .portfolio-item {
         margin: 0 0 15px;
         right: 0;
@@ -292,15 +292,24 @@ section {
         	background-color: white;
         	text-align: center;
         	padding: 25px;
+
         	h4 {
         		text-transform: none;
         		margin: 0;
+			  	display: block;
+			  	min-height: 60px;
+				max-height: 60px;
+			  	overflow: hidden;
         	}
         	p {
         		.serif-font;
         		font-style: italic;
         		font-size: 16px;
         		margin: 0;
+				display: block;
+			  	min-height: 100px;
+			  	max-height: 100px;
+			  	overflow: hidden;
         	}
         }
     }
@@ -537,6 +546,10 @@ section#contact {
 	.section-heading {
 		color: white;
 	}
+}
+
+//forms
+.wishes-form{
 	.form-group {
 		margin-bottom: 25px;
 		input,
@@ -569,7 +582,7 @@ section#contact {
 	   font-weight: 700;
 	   color: @placeholder-text;
 	}
-	:-ms-input-placeholder {  
+	:-ms-input-placeholder {
 	   .heading-font;
 	   font-weight: 700;
 	   color: @placeholder-text;
@@ -697,12 +710,11 @@ ul.social-buttons {
             }            
         }        
     }
-    .modal-backdrop {
+}
+    .portfolio-modal-backdrop {
     	opacity: 0;
     	display: none;
     }
-}
-
 // Highlight Color Customization
 
 ::-moz-selection {
