--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -14,7 +14,7 @@
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" ng-controller="ModalCtrl">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="hidden">
                         <a href="#page-top"></a>
@@ -33,6 +33,9 @@
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Kontakt</a>
+                    </li>
+                    <li>
+                        <a class="" href="#" ng-click="showModal('common/partials/login_modal',{controller:'authCtrl'})"><i class="fa fa-user"></i> Zaloguj</a>
                     </li>
                 </ul>
             </div>
