--- a/static/lib/app/common/partials/login_modal.html
+++ b/static/lib/app/common/partials/login_modal.html
@@ -1,7 +1,7 @@
 
 
 
-    <div class="close-modal" data-dismiss="modal">
+    <div class="close-modal" ng-click="close()">
         <div class="lr">
             <div class="rl">
             </div>
@@ -15,7 +15,7 @@
                     <h2>Zaloguj się</h2>
                     <form name="sentMessage" id="loginForm" class="wishes-form" novalidate>
                         <div class="row">
-                            <div class="col-md-6 col-md-offset-3">
+                            <div class="col-md-8 col-md-offset-2">
                                 <div class="form-group">
                                     <input type="text" class="form-control" placeholder="Twoje imię *" id="name" required data-validation-required-message="Wpisz swoje imię.">
                                     <p class="help-block text-danger"></p>
@@ -36,7 +36,6 @@
                             </div>
                         </div>
                     </form>
-                    <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                 </div>
             </div>
         </div>
