--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -81,7 +81,7 @@
 
     <!-- Contact Form JavaScript -->
     <script src="{% static "js/jqBootstrapValidation.js"%}"></script>
-    <script src="{% static "js/contact_me.js"%}"></script>
+{#    <script src="{% static "js/contact_me.js"%}"></script>#}
 
     <!-- Custom Theme JavaScript -->
     <script src="{% static "js/agency.js"%}"></script>
@@ -96,6 +96,7 @@
     <script src="{% static "lib/app/common/controllers/BaseModalCtrl.js"%}"></script>
     <script src="{% static "lib/app/common/controllers/ModalCtrl.js"%}"></script>
     <script src="{% static "lib/app/common/controllers/AuthCtrl.js"%}"></script>
+    <script src="{% static "lib/app/common/controllers/FormCtrl.js"%}"></script>
     <script src="{% static "lib/app/common/services/apiService.js"%}"></script>
 
 </body>
