--- a/static/lib/app/common/partials/register_modal.html
+++ b/static/lib/app/common/partials/register_modal.html
@@ -1,30 +1,46 @@
 
-<div class="modal-content">
-    <div class="close-modal" data-dismiss="modal">
+
+
+    <div class="close-modal" ng-click="close()">
         <div class="lr">
             <div class="rl">
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
+            <div class="col-xs-12">
                 <div class="modal-body">
                     <!-- Project Details Go Here -->
-                    <h2>Project Name</h2>
-                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                    <img class="img-responsive img-centered" src="img/portfolio/roundicons-free.png" alt="">
-                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                    <p>
-                        <strong>Want these icons in this portfolio item sample?</strong>You can download 60 of them for free, courtesy of <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">RoundIcons.com</a>, or you can purchase the 1500 icon set <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">here</a>.</p>
-                    <ul class="list-inline">
-                        <li>Date: July 2014</li>
-                        <li>Client: Round Icons</li>
-                        <li>Category: Graphic Design</li>
-                    </ul>
-                    <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                    <h2>Zarejestruj się</h2>
+                    <form name="loginForm" id="loginForm" class="wishes-form" novalidate>
+                        <div class="row">
+                            <div class="col-md-8 col-md-offset-2">
+                                <div class="form-group">
+                                    <input type="email" class="form-control" maxlength="50" placeholder="Twój Email *" id="email" required data-validation-required-message="Wpisz swój adres email." data-validation-email-message="Niepoprawny adres email">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                                <div class="form-group">
+                                    <input type="password" class="form-control" maxlength="50" placeholder="Twoje hasło *" id="password" required data-validation-required-message="Wpisz swoje hasło.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+
+                            </div>
+                            <div class="clearfix"></div>
+                            <div class="col-lg-12 text-center">
+                                <div id="success"></div>
+                                <button type="submit" class="btn btn-xl">Zaloguj się</button>
+                            </div>
+                        </div>
+                    </form>
+                    <div class="col-lg-12 text-center">
+                        <br/>
+                        <br/>
+                    </div>
+                    <div class="col-lg-12 text-center" ng-controller="ModalCtrl">
+                        Nie masz konta? <a href="#" ng-click="close();showModal('common/partials/register_modal',{controller:'authCtrl'})"><i class="fa fa-user-plus"></i> Zarejestruj się</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
