--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -14,7 +14,7 @@
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" ng-controller="ModalCtrl">
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" >
                 <ul class="nav navbar-nav navbar-right">
                     <li class="hidden">
                         <a href="#page-top"></a>
@@ -34,9 +34,19 @@
                     <li>
                         <a class="page-scroll" href="#contact">Kontakt</a>
                     </li>
-                    <li>
-                        <a class="" href="#" ng-click="showModal('common/partials/login_modal',{controller:'authCtrl'})"><i class="fa fa-user"></i> Zaloguj</a>
-                    </li>
+                    {% if request.user.is_authenticated %}
+                        <li>
+                            <a class="" href="#" ng-click=""><i class="fa fa-th-list"></i> Moje listy</a>
+                        </li>
+                        <li ng-controller="authCtrl">
+                            <a class="" href="#" ng-click="logout()"><i class="fa fa-power-off"></i> Wyloguj</a>
+                        </li>
+                    {% else %}
+                        <li ng-controller="ModalCtrl">
+                            <a class="" href="#" ng-click="showModal('common/partials/login_modal',{controller:'BaseModalCtrl'})"><i class="fa fa-user"></i> Zaloguj</a>
+                        </li>
+
+                    {% endif %}
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
